--- a/Linkage.csproj
+++ b/Linkage.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Assets\CubeFactory.cs" />
     <Compile Include="Assets\CubeMap.cs" />
     <Compile Include="Assets\CursorScript.cs" />
+    <Compile Include="Assets\EmailManager.cs" />
     <Compile Include="Assets\FaceMap.cs" />
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\GoogleVR\Legacy\Scripts\GvrHead.cs" />
@@ -228,6 +229,9 @@
     <Compile Include="Assets\SolutionMap.cs" />
     <Compile Include="Assets\Tile.cs" />
     <Compile Include="Assets\TxtReader.cs" />
+    <Compile Include="Assets\VRUIButton.cs" />
+    <Compile Include="Assets\emailContent.cs" />
+    <Compile Include="Assets\inboxTab.cs" />
     <Compile Include="Assets\linkNodeScript.cs" />
     <Compile Include="Assets\nodeBillScript.cs" />
   </ItemGroup>
@@ -320,6 +324,7 @@
     <None Include="Assets\Sci-Fi Interior Pack\Standard Assets\Effects\ToonShading\Shaders\ToonLit.shader" />
     <None Include="Assets\Sci-Fi Interior Pack\Standard Assets\Effects\ToonShading\Shaders\ToonLitOutline.shader" />
     <None Include="Assets\Sci-Fi Interior Pack\_Help\ReadMe.txt" />
+    <None Include="Assets\StreamingAssets\emailInbox.txt" />
     <None Include="Assets\StreamingAssets\solutions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
